--- a/.eslintrc
+++ b/.eslintrc
@@ -4,18 +4,19 @@
 	"plugins": ["@typescript-eslint"],
 	"rules": {
 		"semi": "off",
-		// "@typescript-eslint/semi": ["warn"],
 		"@typescript-eslint/no-empty-interface": [
 			"error",
 			{
 				"allowSingleExtends": true
 			}
-		]
+		],
+		"@typescript-eslint/explicit-module-boundary-types": "off"
 	},
 	"extends": [
 		"next/core-web-vitals",
 		"eslint:recommended",
 		"plugin:@typescript-eslint/eslint-recommended",
-		"plugin:@typescript-eslint/recommended"
+		"plugin:@typescript-eslint/recommended",
+		"plugin:react-hooks/recommended"
 	]
 }
