--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
 		"stylelint": "stylelint \"**/*.css\" --fix"
 	},
 	"dependencies": {
-		"@typescript-eslint/eslint-plugin": "^5.12.1",
-		"@typescript-eslint/parser": "^5.12.1",
+		"@svgr/webpack": "^6.2.1",
+		"classnames": "^2.3.1",
 		"next": "12.1.0",
 		"react": "17.0.2",
 		"react-dom": "17.0.2"
@@ -20,11 +20,13 @@
 	"devDependencies": {
 		"@types/node": "^17.0.19",
 		"@types/react": "^17.0.39",
-		"eslint": "8.9.0",
+		"@typescript-eslint/eslint-plugin": "^4.20.0",
+		"@typescript-eslint/parser": "^4.20.0",
+		"eslint": "^7.23.0",
 		"eslint-config-next": "12.1.0",
-		"stylelint": "^14.5.1",
+		"eslint-plugin-react-hooks": "^4.2.0",
 		"stylelint-config-standard": "^25.0.0",
-		"stylelint-order": "^4.1.0",
+		"stylelint-order": "^4.0.0",
 		"stylelint-order-config-standard": "^0.1.3",
 		"typescript": "^4.5.5"
 	}
