--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"classnames": "^2.3.1",
 		"next": "12.1.0",
 		"react": "17.0.2",
-		"react-dom": "17.0.2"
+		"react-dom": "17.0.2",
+		"react-hook-form": "^7.27.1"
 	},
 	"devDependencies": {
 		"@types/node": "^17.0.19",
